force-app/main/default/objects/Process__c/fields/Canvas_JSON__c.field-meta.xml
<CustomField>
    <fullName>Canvas_JSON__c</fullName>
    <description>JSON representation of the complete BPMN canvas state. This is the source of truth for the diagram editor. Contains all shapes, connections, positions, and styling.</description>
    <inlineHelpText>System field - stores the diagram canvas data. Do not edit manually.</inlineHelpText>
    <label>Canvas JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>