force-app/main/default/objects/Process__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The category this process belongs to for organizational and reporting purposes. Select the most specific applicable category.</description>
    <inlineHelpText>Select the category that best describes this process.</inlineHelpText>
    <label>Category</label>
    <referenceTo>Process_Category__c</referenceTo>
    <relationshipLabel>Processes</relationshipLabel>
    <relationshipName>Processes</relationshipName>
    <type>Lookup</type>
</CustomField>