force-app/main/default/objects/Process__c/fields/Connection_Count__c.field-meta.xml
<CustomField>
    <fullName>Connection_Count__c</fullName>
    <description>Count of BPMN connections (sequence flows) in this process diagram.</description>
    <label>Connection Count</label>
    <summaryForeignKey>BPMN_Connection__c.Process__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>