force-app/main/default/objects/Process__c/fields/Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Version__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Current version number of the process. Automatically incremented each time the process is published. Used for version tracking and audit purposes.</description>
    <inlineHelpText>The current published version number (auto-incremented).</inlineHelpText>
    <label>Current Version</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>