force-app/main/default/objects/Process__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Comprehensive description of the business process including its purpose, scope, inputs, outputs, and any relevant business context.</description>
    <inlineHelpText>Describe the purpose, scope, and business context of this process.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>