force-app/main/default/objects/Process__c/fields/Element_Count__c.field-meta.xml
<CustomField>
    <fullName>Element_Count__c</fullName>
    <description>Count of BPMN elements (shapes) in this process diagram.</description>
    <label>Element Count</label>
    <summaryForeignKey>BPMN_Element__c.Process__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>