force-app/main/default/objects/Process__c/fields/Last_Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Published_Date__c</fullName>
    <description>Date and time when this process was last published. Updated automatically when a new version is created.</description>
    <inlineHelpText>When was this process last published?</inlineHelpText>
    <label>Last Published Date</label>
    <type>DateTime</type>
</CustomField>