force-app/main/default/objects/Process__c/fields/Process_Owner__c.field-meta.xml
<CustomField>
    <fullName>Process_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The business owner accountable for this process. This person is responsible for process governance, approving changes, and ensuring the process meets business needs. Different from record ownership.</description>
    <inlineHelpText>Select the business owner responsible for governing this process.</inlineHelpText>
    <label>Process Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Owned_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>