force-app/main/default/objects/Process__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current lifecycle status of the process definition. Controls visibility and editability of the process.</description>
    <inlineHelpText>Draft: Being created. In Review: Awaiting approval. Published: Official version. Archived: No longer active.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
                <color>#FFB75D</color>
            </value>
            <value>
                <fullName>In Review</fullName>
                <color>#62B7ED</color>
            </value>
            <value>
                <fullName>Published</fullName>
                <color>#4BC076</color>
            </value>
            <value>
                <fullName>Archived</fullName>
                <color>#939393</color>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>