force-app/main/default/objects/Process__c/fields/ViewBox_Settings__c.field-meta.xml
<CustomField>
    <fullName>ViewBox_Settings__c</fullName>
    <description>JSON storing the canvas viewport settings (pan X/Y, zoom level). Allows the diagram to open at the last viewed position.</description>
    <inlineHelpText>System field - stores canvas viewport position.</inlineHelpText>
    <label>ViewBox Settings</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>